// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Card/Alert AllVariants smoke-test 1`] = `
<div data-test-block="true">
  <div class="_card_nrlm6_5"
       data-color="white"
  >
    <div class="_cardAlert_1mlgn_1 bottomSpacingXL"
         data-variant="info"
    >
      <div class="_cardAlertHeadingContainer_1mlgn_49">
        <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _cardAlertIcon_1mlgn_23"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M21 3H3v18h18zm-7.75 5.4h-2.5V6h2.5zm0 9.6h-2.5v-7.2h2.5z">
          </path>
        </svg>
        <h3 class="_heading_12p5o_1 _heading_level5_12p5o_47">
          Merknad
        </h3>
        <button class="_button_19ayz_1 _button_medium_19ayz_42  _cardAlertCloseButton_1mlgn_42"
                data-brightness="default"
                type="button"
        >
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_19ayz_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r7:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r7:">
              Lukk
            </title>
            <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
            </path>
          </svg>
        </button>
      </div>
      <div class="_cardContent_48t19_1">
        <div>
          Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
        </div>
      </div>
      <div class="_cardAlertArrow_1mlgn_29">
      </div>
    </div>
    <div class="_cardAlert_1mlgn_1 bottomSpacingXL"
         data-variant="warning"
    >
      <div class="_cardAlertHeadingContainer_1mlgn_49">
        <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _cardAlertIcon_1mlgn_23"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <h3 class="_heading_12p5o_1 _heading_level5_12p5o_47">
          Merknad
        </h3>
        <button class="_button_19ayz_1 _button_medium_19ayz_42  _cardAlertCloseButton_1mlgn_42"
                data-brightness="default"
                type="button"
        >
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_19ayz_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r9:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r9:">
              Lukk
            </title>
            <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
            </path>
          </svg>
        </button>
      </div>
      <div class="_cardContent_48t19_1">
        <div>
          Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
        </div>
      </div>
      <div class="_cardAlertArrow_1mlgn_29">
      </div>
    </div>
    <div class="_cardAlert_1mlgn_1 bottomSpacingXL"
         data-variant="danger"
    >
      <div class="_cardAlertHeadingContainer_1mlgn_49">
        <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _cardAlertIcon_1mlgn_23"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27zM13 16h-2v-2h2zm0-4h-2V8h2z">
          </path>
        </svg>
        <h3 class="_heading_12p5o_1 _heading_level5_12p5o_47">
          Merknad
        </h3>
        <button class="_button_19ayz_1 _button_medium_19ayz_42  _cardAlertCloseButton_1mlgn_42"
                data-brightness="default"
                type="button"
        >
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_19ayz_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:rb:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:rb:">
              Lukk
            </title>
            <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
            </path>
          </svg>
        </button>
      </div>
      <div class="_cardContent_48t19_1">
        <div>
          Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
        </div>
      </div>
      <div class="_cardAlertArrow_1mlgn_29">
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Card/Alert WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       class="_cardAlert_1mlgn_1 dummyClassname"
       lang="en"
       data-testid="123ID"
       data-variant="info"
  >
    <div class="_cardAlertHeadingContainer_1mlgn_49">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _cardAlertIcon_1mlgn_23"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M21 3H3v18h18zm-7.75 5.4h-2.5V6h2.5zm0 9.6h-2.5v-7.2h2.5z">
        </path>
      </svg>
      <h3 class="_heading_12p5o_1 _heading_level5_12p5o_47">
        Merknad
      </h3>
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _cardAlertCloseButton_1mlgn_42"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3:">
            Lukk
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </div>
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
    <div class="_cardAlertArrow_1mlgn_29">
    </div>
  </div>
</div>
`;

exports[`Tester/Card/Alert WithOnClose play-test 1`] = `
<div data-test-block="true">
</div>
`;

exports[`Tester/Card/Alert WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_cardAlert_1mlgn_1"
       data-variant="info"
       id="dummyIdForwardedFromRef"
  >
    <div class="_cardAlertHeadingContainer_1mlgn_49">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _cardAlertIcon_1mlgn_23"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M21 3H3v18h18zm-7.75 5.4h-2.5V6h2.5zm0 9.6h-2.5v-7.2h2.5z">
        </path>
      </svg>
      <h3 class="_heading_12p5o_1 _heading_level5_12p5o_47">
        Merknad
      </h3>
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _cardAlertCloseButton_1mlgn_42"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1:">
            Lukk
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </div>
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
    <div class="_cardAlertArrow_1mlgn_29">
    </div>
  </div>
</div>
`;

exports[`Tester/Card/Alert WithSvgPath smoke-test 1`] = `
<div data-test-block="true">
  <div class="_cardAlert_1mlgn_1"
       data-variant="info"
  >
    <div class="_cardAlertHeadingContainer_1mlgn_49">
      <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _cardAlertIcon_1mlgn_23"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M11.52 4.656a7.61 7.61 0 0 1 1.682.18l-2.788 9.301 8.614-3.568c.15.61.223 1.235.22 1.863a7.723 7.723 0 0 1-7.728 7.728c-4.272 0-7.776-3.456-7.776-7.728S7.2 4.656 11.52 4.656Zm4.058-.789-.074-.027c2.01.7 3.623 2.234 4.475 4.17l-6.442 2.669 2.041-6.812Z">
        </path>
      </svg>
      <h3 class="_heading_12p5o_1 _heading_level5_12p5o_47">
        Merknad
      </h3>
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _cardAlertCloseButton_1mlgn_42"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r5:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r5:">
            Lukk
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </div>
    Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
    <div class="_cardAlertArrow_1mlgn_29">
    </div>
  </div>
</div>
`;
